Fixed blockquote z-index bug

--- a/css/default.css
+++ b/css/default.css
@@ -1023,6 +1023,8 @@ blockquote p > a:first-child code:first-child {
     */
 blockquote table {
     font-size: 0.7em;
+	position: relative;
+	z-index: 1;
 }
 
 /*************/
